third_party/blink/web_tests/external/wpt/css/cssom-view/idlharness-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Window: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Document: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Element: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface HTMLElement: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface HTMLImageElement: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Range: original interface defined assert_true: Original interface should be defined expected true got false
PASS Partial interface MouseEvent: original interface defined
PASS Partial dictionary MouseEventInit: original dictionary defined
Harness: the test ran to completion.

